--- a/gapminder_data_visualization.ipynb
+++ b/gapminder_data_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Projekt 1: \"Gapminder Data Visualization\"\""
+    "### Project 1: \"Gapminder Data Visualization\"\""
    ]
   },
   {
