--- a/gapminder_data_visualization.ipynb
+++ b/gapminder_data_visualization.ipynb
@@ -2504,7 +2504,7 @@
     }
    ],
    "source": [
-    "# Cellecting specific columns and plotting them\n",
+    "# Collecting specific columns and plotting them\n",
     "sns.set()\n",
     "\n",
     "df_subset = df.loc[df['country'].isin(['Germany', 'France', 'Sweden'])]\n",
