--- a/gapminder_data_visualization.ipynb
+++ b/gapminder_data_visualization.ipynb
@@ -489,7 +489,7 @@
     }
    ],
    "source": [
-    "# Columns have a different data types (life: integer numbers, spending: objects). Converting spending-DF into integer numbers\n",
+    "# Columns have different data types (life: integer numbers, spending: objects). Converting spending-DF into integer numbers\n",
     "spending.columns = spending.columns.astype(int)\n",
     "spending.columns"
    ]
